smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-service-binding.errors
[ERROR] -: Parse error at line 5, column 26 near `, | Model
