smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-service-binding.smithy
namespace com.foo

service Foo {
    version: "2020-07-02",
    version: "2020-07-02",
}
